[tool.poetry]
name = "arpy"
version = "0.3.7"
description = "A library for computing with Absolute Relativity"
authors = ["IDAM <innes.andersonmorrison@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-black = "^0.3.8"
neovim = "^0.3.1"
mypy = "^0.770"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.black]
line_length = 100

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
sort = "Miss"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
