[package]
name = "ar_notes"
version = "0.1.0"
authors = ["IDAM <innes.andersonmorrison@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
doc = false
name = "arc"
path = "src/bin/main.rs"

[dependencies]
# arthroprod = { git = "https://github.com/sminez/arthroprod" }
arthroprod = { path = "../arthroprod" }
clap = { version = "3.0.14", features = ["derive", "unicode"] }
itertools = "0.10.3"
paste = "1.0.6"
pest = "2.1.3"
pest_derive = "2.1.0"
rustyline = "9.1.2"
thiserror = "1.0.30"
