[package]
version = "0.4.0"
name = "arthroprod"
authors = ["Innes Anderson-Morrison <innesdmorrison@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/sminez/arthroprod"
documentation = "https://docs.rs/arthroprod"
readme = "README.md"
description = """
Clifford Algebra based computation for the theory of Absolute Relativity.
"""
edition = "2018"

[dependencies]
itertools = "0.10.0"
paste = "1.0.5"
once_cell = "1.7.2"
serde = { version = "1.0", features = ["derive"] }
